--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "^14.2.15",
     "react": "^18",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
@@ -23,7 +24,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
-  }, 
+  },
   "engines": {
     "node": ">=14.x"
   }
