--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ceramicnetwork/http-client": "^6.4.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "dids": "^5.0.3",
+    "key-did-provider-ed25519": "^4.0.2",
+    "key-did-resolver": "^4.0.0",
     "next": "^15.3.1",
     "postcss": "^8.5.3",
     "react": "^18",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "uint8arrays": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
