--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.19.2",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   },
   "engines": {
     "node": ">=14.x"
